--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource/fira-mono": "^4.5.0"
+		"@fontsource/fira-mono": "^4.5.0",
+		"@sveltejs/adapter-static": "^1.0.0-next.42"
 	}
 }
