New Data + Huge Update

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource/fira-mono": "^4.5.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.42"
+		"@sveltejs/adapter-static": "^1.0.0-next.42",
+		"carbon-components-svelte": "^0.70.12",
+		"svelte-select": "^4.4.7"
 	}
 }
